--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -131,6 +131,9 @@
         <xliff:g id="number">%d</xliff:g>
     </string>
 
+    <!-- Name of the button that links to the GPS settings screen. [CHAR LIMIT=NONE] -->
+    <string name="status_bar_settings_gps_button">GPS</string>
+
     <!-- Separator for PLMN and SPN in network name. -->
     <string name="status_bar_network_name_separator" translatable="false">"\n"</string>
 
