--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -140,6 +140,17 @@
     <!-- Name of the button that links to the lock screen. [CHAR LIMIT=NONE] -->
     <string name="status_bar_settings_lockscreen_button">Lock screen</string>
 
+    <!-- Name of the button that links to the Wifi AP settings screen. [CHAR LIMIT=NONE] -->
+    <string name="status_bar_settings_wifiap_button">Wi-Fi access point</string>
+
+    <!-- Name of the button that links to the Tether settings screen. [CHAR LIMIT=NONE] -->
+    <string name="status_bar_settings_usbtether_button">USB tethering</string>
+
+    <!-- Name of the button that links to the Tether settings screen. [CHAR LIMIT=NONE] -->
+    <string name="status_bar_settings_bttether_button">Bluetooth tethering</string>
+
+    <string name="status_bar_screen_timeout"><xliff:g id="timeout_description">%1$s</xliff:g> screen timeout</string>
+
     <!-- Separator for PLMN and SPN in network name. -->
     <string name="status_bar_network_name_separator" translatable="false">"\n"</string>
 
